workloads.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: web-app

spec:
  
  #minReadySeconds: 30
  replicas: 1
  
  selector:
    matchLabels:
      app: web-app 
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
      - name: web-app
        image: richardchesterwood/k8s-fleetman-webapp-angular:release0-5
---

apiVersion: apps/v1
    
kind: Deployment

metadata:
  name: position-tracker

spec:
  #minReadySeconds: 30      
  replicas: 1
  selector:
    matchLabels:
      app: position-tracker
  template:
    metadata:
      labels:
        app: position-tracker
    spec:
      containers:
        - name: position-tracker
          image: richardchesterwood/k8s-fleetman-position-tracker:release1
