services.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app
spec:
  selector:
    app: web-app
    

  ports:
  - name: http
    port: 80
    #nodePort: 30080
  
  type:  ClusterIP

---

apiVersion: v1
kind: Service
metadata:
  name: position-tracker
spec:
  selector:
    app: position-tracker
    

  ports:
  - name: http
    port: 8080
    #nodePort: 30020
  
  type: ClusterIP

# apiVersion: v1
# kind: Service
# metadata:
#   name: fleetman-queue
# spec:
#   selector:
#     app: queue
    

#   ports:
#   - name: http
#     port: 8161
#     nodePort: 30010
  
#   - name: endpoint
#     port: 61616

#   type: NodePort

# ---
